# cdk-pyproject

./: noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  nox.yaml
src/cdk_pyproject/: __init__.py  py_project.py  utils.py
tests/: test_construct.py
tests/testproject-rye/: pyproject.toml
tests/testproject-rye/app/lambda-1/: pyproject.toml
tests/testproject-rye/app/lambda-2/: pyproject.toml
tests/testproject-uv/: pyproject.toml
tests/testproject-uv/app/lambda-1/: pyproject.toml
tests/testproject-uv/app/lambda-2/: pyproject.toml
tests/testproject-uv/src/testproject_uv/: __init__.py
