[project]
name = "lambda-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lambda-1",
    "peppercorn>=0.6",
]

[project.scripts]
lambda-2 = "lambda_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lambda-1 = { workspace = true }
